k8s/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: community-be
  namespace: community
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: community-be
  template:
    metadata:
      labels:
        app: community-be
    spec:
      volumes:
        - name: app-logs
          emptyDir: {}

      containers:
        - name: app
          image: potenup/poten_up:sha-2780757
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-logs
              mountPath: /app/monitoring/logs
      livenessProbe:
        httpGet:
          path: /449b92a4/actuator/health/liveness
          port: 8080
        initialDelaySeconds: 20
        periodSeconds: 10
        timeoutSeconds: 2
        failureThreshold: 3

      readinessProbe:
        httpGet:
          path: /449b92a4/actuator/health/readiness
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 3

  strategy:
    blueGreen:
      activeService: community-be-active
      previewService: community-be-preview
      autoPromotionEnabled: true

      prePromotionAnalysis:
        templates:
          - templateName: community-be-ready-check
