k8s/service-preview.yml
apiVersion: v1
kind: Service
metadata:
  name: community-be-preview
  namespace: community
spec:
  type: ClusterIP
  selector:
    app: community-be
  ports:
    - name: http
      port: 80
      targetPort: 8080
